applications/customer-service/overlays/prod/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  template:
    spec:
      containers:
        - name: app
