applications/customer-service/overlays/prod/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: customer-service
      containers:
        - name: app
          resources:
            requests: {cpu: 250m, memory: 1Gi}
            limits:   {memory: 2Gi}
